@@ -9,6 +9,8 @@ group = 'org.reldb'
 version = '1.0.1-SNAPSHOT'
 description = 'A simple library for logging to SQL databases.'
 
+java.sourceCompatibility = JavaVersion.VERSION_1_8
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
